# sign-invoices

./: .gitignore  README.md  pyproject.toml
sign_invoices/: constants.py  main.py  services.py
