[tool.poetry]
name = "sign-invoices"
version = "0.1.0"
description = ""
authors = ["eliseovargas <evargas@cyt.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.11.5"
pymupdf = "^1.25.3"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
